--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      circleci/openjdk:8-jdk
     steps:
-      - run:
+      - checkout
+      - run: 
           name: The First Step
           command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+            gradle test
