--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 jobs:
   build:
     docker:
-     - circleci/openjdk:8-jdk
+     - image: circleci/openjdk:8-jdk
     steps:
       - checkout
       - run: 
