--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,14 @@
 version: 2.0
 jobs:
   build:
-    docker:
-     - image: circleci/openjdk:8-jdk
+    dockersize:
+      machine: true
     steps:
       - checkout
-      - run: 
-          name: The First Step
-          command: |
-            gradle test
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS 
+          
+      - run: docker buid -t $DOCKER_USER/myapp:$CIRCLE_SHA1 .
+      - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
+   FROM alpine
+   ENTERYPOINT echo "Hello World" 
+     
