--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,15 @@
 version: 2.0
 jobs:
   build:
-    dockersize:
+    dockerize:
       machine: true
-    steps:
-      - checkout
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS 
-          
-      - run: docker buid -t $DOCKER_USER/myapp:$CIRCLE_SHA1 .
-      - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
-   FROM alpine
-   ENTERYPOINT echo "Hello World" 
+      steps:
+        - checkout
+        #login to docker
+        - run: docker login -u $DOCKER_USER -p $DOCKER_PASS 
+        #Build the application image
+        - run: docker buid -t $DOCKER_USER/myapp:$CIRCLE_SHA1 .
+        #deploy the image
+        - run: docker push $DOCKER_USER/myapp:$CIRCLE_SHA1
+    
      
